<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/act_login_toolbar"
        style="@style/Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/welcome" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/act_login_input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_content_padding"
        android:layout_marginStart="@dimen/double_content_padding"
        app:layout_constraintBottom_toTopOf="@id/act_login_input_layout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_login_toolbar"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/act_login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/act_login_input_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_content_padding"
        android:layout_marginStart="@dimen/double_content_padding"
        android:layout_marginTop="@dimen/half_content_padding"
        app:layout_constraintBottom_toTopOf="@id/act_login_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_login_input_layout_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/act_login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/act_login_button_login"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_content_padding"
        android:layout_marginStart="@dimen/double_content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:background="@drawable/ripple_button_primary"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@id/act_login_button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_login_input_layout_password" />

    <Button
        android:id="@+id/act_login_button_register"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_content_padding"
        android:layout_marginStart="@dimen/double_content_padding"
        android:layout_marginTop="@dimen/half_content_padding"
        android:background="@drawable/ripple_button_secondary"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_login_button_login" />

</android.support.constraint.ConstraintLayout>